update display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mastoid-color-theme-vsc",
-    "displayName": "mastoid-color-theme-vsc",
+    "displayName": "Mastoid Color Theme",
     "description": "",
     "version": "0.0.2",
     "engines": {
